ex5/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fandata360-sso-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "64M"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - http:
        paths:
          - path: /(/|$)(.*)
            backend:
              serviceName: monolit
              servicePort: 80
          - path: /api/v1/users(/|$)(.*)
            backend:
              serviceName: endpoint_backend_users
              servicePort: 80
